# llama-cpp-rs

./: .gitignore  Cargo.toml  prompt
grammars/: answer.gbnf
llama-cpp-2/src/context/: sample.rs
llama-cpp-2/src/context/sample/: sampler.rs
main/: Cargo.toml
main/src/: c-impl.md  main.rs
simple/src/: main.rs
