[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama-cpp-2 = { path = "../llama-cpp-2", version = "0.1.45", features = ["sampler"] }
lazy_static = "1.4.0"
ctrlc = "3.2.1"
signal-hook = "0.3"
rand = "0.8.4"
anyhow = { workspace = true }

[lints]
workspace = true
